@@ -1,3 +1,10 @@
+2003-06-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-reader.c: 
+	- style fixes
+	- fixes memory leaks found and patched by Narayana Pattipati
+	- fixes #110572  
+	
 2003-06-03  Mikael Hallendal  <micke@codefactory.se>
 
         * src/yelp-window.c: (window_about_cb): 
